--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Payment Tracker</title>
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/babel" src="App.js"></script>
+    <script src="App.js"></script>
 </body>
 </html>
